--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/styled-components": "^5.1.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-ga": "^3.1.2",
     "react-image-gallery": "^1.0.8",
     "react-player": "^2.6.0",
     "react-router-dom": "^5.2.0",
